New css images and fixed the text so user knows what there doing

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <header class="section">
       <h1 class="title is-2">Electric Vehicle 3D PBM</h1>
       <p class="subtitle is-4">Explore the future of EV Cars</p>
+      <h5 class="subtitle is-4"> 3D cars are interactible, Zoom, and Drag to see the full detials.</h5>
     </header>
 
     <!-- 3D Model Container -->
@@ -41,6 +42,7 @@
             <!-- EV Brands Section -->
             <section class="EV-section" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
                 <h2>Brands That Sell EVs</h2>
+                <h4>Hover your mouse to interact with the logos.</h4>
                 <div class="EV-icons">
                     <!-- Tesla -->
                     <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500">
@@ -160,29 +162,69 @@
           </div>
         </section>
   
-        <!-- Technological Innovations Section -->
-        <section class="innovations box" data-aos="fade-up">
-          <h2 class="title is-3">Transformative Innovations in Electric Vehicles</h2>
-          <p>Several groundbreaking innovations are at the heart of the EV revolution:</p>
-          <h3 class="subtitle is-4">1. Battery Technology</h3>
-          <p>One of the most significant innovations is the development of high-energy-density batteries, which has dramatically improved the range and performance of electric vehicles. Lithium-ion and solid-state batteries offer faster charging times, longer lifespans, and more efficient energy storage, pushing the EV market to new heights.</p>
-          <h3 class="subtitle is-4">2. Autonomous Driving</h3>
-          <p>Autonomous driving technologies are rapidly evolving in electric vehicles. Self-driving cars reduce human error and make transportation safer, while also offering convenience and accessibility to people who are unable to drive themselves.</p>
-          <h3 class="subtitle is-4">3. Regenerative Braking</h3>
-          <p>Regenerative braking allows EVs to recover energy that would otherwise be lost during braking. This innovation improves energy efficiency, increases driving range, and reduces wear on mechanical brake components.</p>
-        </section>
+       <!-- Technological Innovations Section -->
+<section class="innovations box" data-aos="fade-up">
+  <h2 class="title is-3">Transformative Innovations in Electric Vehicles</h2>
+  <p>Several groundbreaking innovations are at the heart of the EV revolution:</p>
+
+  <!-- Battery Technology Section -->
+  <div class="innovation-item">
+    <div class="innovation-image">
+      <img src="images/Battery Tech.jpg" alt="Battery Technology" />
+    </div>
+    <div class="innovation-text">
+      <h3 class="subtitle is-4">1. Battery Technology</h3>
+      <p>One of the most significant innovations is the development of high-energy-density batteries, which has dramatically improved the range and performance of electric vehicles. Lithium-ion and solid-state batteries offer faster charging times, longer lifespans, and more efficient energy storage, pushing the EV market to new heights.</p>
+    </div>
+  </div>
+
+  <!-- Autonomous Driving Section -->
+  <div class="innovation-item">
+    <div class="innovation-image">
+      <img src="images/AutoDrive.jfif" alt="Autonomous Driving" />
+    </div>
+    <div class="innovation-text">
+      <h3 class="subtitle is-4">2. Autonomous Driving</h3>
+      <p>Autonomous driving technologies are rapidly evolving in electric vehicles. Self-driving cars reduce human error and make transportation safer, while also offering convenience and accessibility to people who are unable to drive themselves.</p>
+    </div>
+  </div>
+
+  <!-- Regenerative Braking Section -->
+  <div class="innovation-item">
+    <div class="innovation-image">
+      <img src="images/regenerative-brake-diagram.jpg" alt="Regenerative Braking" />
+    </div>
+    <div class="innovation-text">
+      <h3 class="subtitle is-4">3. Regenerative Braking</h3>
+      <p>Regenerative braking allows EVs to recover energy that would otherwise be lost during braking. This innovation improves energy efficiency, increases driving range, and reduces wear on mechanical brake components.</p>
+    </div>
+  </div>
+</section>
+
   
-        <!-- Purpose and Function of EVs Section -->
-        <section class="purpose-function box" data-aos="fade-right">
-          <h2 class="title is-3">Purpose and Function of Electric Vehicles</h2>
-          <p>Electric vehicles play a very important role in building a sustainable future. Their function is to provide an eco-friendly alternative to traditional gasoline-powered cars, reducing emissions, energy consumption, and overall environmental damage. EVs are designed to meet the transportation needs of modern society while minimizing the ecological footprint.</p>
-          <ul>
-            <li>Sustainability: EVs are mainly designed to provide sustainability in transportation and offer an environmentally friendly solution for reducing the consumption of fossil fuel.</li>
-            <li>Cost-effectiveness: EVs have lower operating costs than conventional vehicles due to savings on fuel and maintenance costs.</li>
-            <li>Energy Efficiency: EVs efficiently transform most of their energy into motion, using electric motors that are far less wasteful than internal combustion engines.</li>
-          </ul>
-        </section>
-  
+<!-- Purpose and Function of EVs Section -->
+<section class="purpose-function box" data-aos="fade-right">
+  <div class="innovation-item">
+    <!-- Image Section -->
+    <div class="innovation-image">
+      <img src="images/Howevswork.jpg" alt="Purpose and Function of EVs" />
+    </div>
+
+    <!-- Text Section -->
+    <div class="innovation-text">
+      <h2 class="title is-3">Purpose and Function of Electric Vehicles</h2>
+      <p>Electric vehicles play a very important role in building a sustainable future. Their function is to provide an eco-friendly alternative to traditional gasoline-powered cars, reducing emissions, energy consumption, and overall environmental damage. EVs are designed to meet the transportation needs of modern society while minimizing the ecological footprint.</p>
+      <ul>
+        <li>Sustainability: EVs are mainly designed to provide sustainability in transportation and offer an environmentally friendly solution for reducing the consumption of fossil fuel.</li>
+        <li>Cost-effectiveness: EVs have lower operating costs than conventional vehicles due to savings on fuel and maintenance costs.</li>
+        <li>Energy Efficiency: EVs efficiently transform most of their energy into motion, using electric motors that are far less wasteful than internal combustion engines.</li>
+      </ul>
+    </div>
+  </div>
+</section>
+
+
+     
         <!-- Security Analysis Section -->
         <section class="security box" data-aos="fade-left">
           <h2 class="title is-3">EV Security Analysis</h2>
