New images, New Media queries for moblie, fixed whitespace errors

--- a/index.html
+++ b/index.html
@@ -39,74 +39,75 @@
         </section>
 
         <div class="EV-container">
-            <!-- EV Brands Section -->
-            <section class="EV-section" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
-                <h2>Brands That Sell EVs</h2>
-                <h4>Hover your mouse to interact with the logos.</h4>
-                <div class="EV-icons">
-                    <!-- Tesla -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500">
-                        <img src="SVG-Images/tesla-svgrepo-com.svg" alt="Tesla" class="EV-Icon">
-                        <p class="EV-name">Tesla</p>
-                    </div>
-                    <!-- Nissan -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100">
-                        <img src="SVG-Images/nissan-svgrepo-com.svg" alt="Nissan" class="EV-Icon">
-                        <p class="EV-name">Nissan</p>
-                    </div>
-                    <!-- BMW -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="200">
-                        <img src="SVG-Images/bmw-svgrepo-com.svg" alt="BMW" class="EV-Icon">
-                        <p class="EV-name">BMW</p>
-                    </div>
-                    <!-- Ford -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300">
-                        <img src="SVG-Images/ford-svgrepo-com.svg" alt="Ford" class="EV-Icon">
-                        <p class="EV-name">Ford</p>
-                    </div>
-                    <!-- Audi -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="400">
-                        <img src="SVG-Images/audi-svgrepo-com.svg" alt="Audi" class="EV-Icon">
-                        <p class="EV-name">Audi</p>
-                    </div>
-                    <!-- Chevrolet -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="500">
-                        <img src="SVG-Images/chevrolet-svgrepo-com.svg" alt="Chevrolet" class="EV-Icon">
-                        <p class="EV-name">Chevrolet</p>
-                    </div>
-                    <!-- Hyundai -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="600">
-                        <img src="SVG-Images/hyundai-svgrepo-com.svg" alt="Hyundai" class="EV-Icon">
-                        <p class="EV-name">Hyundai</p>
-                    </div>
-                    <!-- Kia -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="700">
-                        <img src="SVG-Images/kia-svgrepo-com.svg" alt="Kia" class="EV-Icon">
-                        <p class="EV-name">Kia</p>
-                    </div>
-                    <!-- Mercedes-Benz -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="800">
-                        <img src="SVG-Images/mercedes-benz-svgrepo-com.svg" alt="Mercedes-Benz" class="EV-Icon">
-                        <p class="EV-name">Mercedes-Benz</p>
-                    </div>
-                    <!-- Porsche -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="900">
-                        <img src="SVG-Images/porsche-svgrepo-com.svg" alt="Porsche" class="EV-Icon">
-                        <p class="EV-name">Porsche</p>
-                    </div>
-                    <!-- Volkswagen -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="1000">
-                        <img src="SVG-Images/volkswagen-svgrepo-com.svg" alt="Volkswagen" class="EV-Icon">
-                        <p class="EV-name">Volkswagen</p>
-                    </div>
-                    <!-- Honda -->
-                    <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="1100">
-                        <img src="SVG-Images/honda-svgrepo-com.svg" alt="Honda" class="EV-Icon">
-                        <p class="EV-name">Honda</p>
-                    </div>
-                </div>
-            </section>
+          <!-- EV Brands Section -->
+          <section class="EV-section" data-aos="fade-up" data-aos-duration="1000" data-aos-delay="200">
+            <h2>Brands That Sell EVs</h2>
+            <h4>Hover your mouse to interact with the logos.</h4>
+            <div class="EV-icons">
+              <!-- Tesla -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500">
+                <img src="SVG-Images/tesla-svgrepo-com.svg" alt="Tesla" class="EV-Icon">
+                <p class="EV-name">Tesla</p>
+              </div>
+              <!-- Nissan -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="100">
+                <img src="SVG-Images/nissan-svgrepo-com.svg" alt="Nissan" class="EV-Icon">
+                <p class="EV-name">Nissan</p>
+              </div>
+              <!-- BMW -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="200">
+                <img src="SVG-Images/bmw-svgrepo-com.svg" alt="BMW" class="EV-Icon">
+                <p class="EV-name">BMW</p>
+              </div>
+              <!-- Ford -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="300">
+                <img src="SVG-Images/ford-svgrepo-com.svg" alt="Ford" class="EV-Icon">
+                <p class="EV-name">Ford</p>
+              </div>
+              <!-- Audi -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="400">
+                <img src="SVG-Images/audi-svgrepo-com.svg" alt="Audi" class="EV-Icon">
+                <p class="EV-name">Audi</p>
+              </div>
+              <!-- Chevrolet -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="500">
+                <img src="SVG-Images/chevrolet-svgrepo-com.svg" alt="Chevrolet" class="EV-Icon">
+                <p class="EV-name">Chevrolet</p>
+              </div>
+              <!-- Hyundai -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="600">
+                <img src="SVG-Images/hyundai-svgrepo-com.svg" alt="Hyundai" class="EV-Icon">
+                <p class="EV-name">Hyundai</p>
+              </div>
+              <!-- Kia -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="700">
+                <img src="SVG-Images/kia-svgrepo-com.svg" alt="Kia" class="EV-Icon">
+                <p class="EV-name">Kia</p>
+              </div>
+              <!-- Mercedes-Benz -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="800">
+                <img src="SVG-Images/mercedes-benz-svgrepo-com.svg" alt="Mercedes-Benz" class="EV-Icon">
+                <p class="EV-name">Mercedes-Benz</p>
+              </div>
+              <!-- Porsche -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="900">
+                <img src="SVG-Images/porsche-svgrepo-com.svg" alt="Porsche" class="EV-Icon">
+                <p class="EV-name">Porsche</p>
+              </div>
+              <!-- Volkswagen -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="1000">
+                <img src="SVG-Images/volkswagen-svgrepo-com.svg" alt="Volkswagen" class="EV-Icon">
+                <p class="EV-name">Volkswagen</p>
+              </div>
+              <!-- Honda -->
+              <div class="EV" onclick="toggleEVInfo(this)" data-aos="zoom-in" data-aos-duration="500" data-aos-delay="1100">
+                <img src="SVG-Images/honda-svgrepo-com.svg" alt="Honda" class="EV-Icon">
+                <p class="EV-name">Honda</p>
+              </div>
+            </div>
+          </section>
         </div>
+  
         
         <!-- Gallery Section -->
         <section class="gallery box" data-aos="fade-left">
@@ -200,7 +201,6 @@
     </div>
   </div>
 </section>
-
   
 <!-- Purpose and Function of EVs Section -->
 <section class="purpose-function box" data-aos="fade-right">
@@ -209,7 +209,6 @@
     <div class="innovation-image">
       <img src="images/Howevswork.jpg" alt="Purpose and Function of EVs" />
     </div>
-
     <!-- Text Section -->
     <div class="innovation-text">
       <h2 class="title is-3">Purpose and Function of Electric Vehicles</h2>
@@ -223,31 +222,46 @@
   </div>
 </section>
 
+<!-- Security Analysis Section -->
+<section class="security box" data-aos="fade-left">
+  <div class="innovation-item">
+    <!-- Image Section -->
+    <div class="innovation-image">
+      <img src="images/Introduction-to-Vehicle-Cybersecurity.png" alt="EV Security Analysis" />
+    </div>
+    <!-- Text Section -->
+    <div class="innovation-text">
+      <h2 class="title is-3">EV Security Analysis</h2>
+      <p>With the world increasingly moving towards electric vehicles, addressing the security vulnerabilities of new technologies is quite paramount. For instance:</p>
+      <ul>
+        <li>Battery Safety: The risk of battery fire has been one of the worries, though this risk is much reduced with advances in BMS and safety protocols.</li>
+        <li>Cybersecurity: With EVs being highly connected, the potential for cyber-attacks and data breaches is an emerging concern. Ensuring that vehicle communication systems and user data are kept secure is very important in terms of trust and security.</li>
+        <li>Charging Station Security: With increasing EVs on the road, charging stations also need to be secured against potential threats for both the vehicle and the station infrastructure.</li>
+      </ul>
+    </div>
+  </div>
+</section>
+  
+<!-- Future of EVs Section -->
+<section class="future box" data-aos="fade-up">
+  <div class="innovation-item">
+    <!-- Image Section -->
+    <div class="innovation-image">
+      <img src="images/EVsoveryears.jpg" alt="EV over the years" />
+    </div>
+    <!-- Text Section -->
+    <div class="innovation-text">
+      <h2 class="title is-3">The Future of Electric Vehicles</h2>
+      <p>The future of electric vehicles is bright. We are seeing rapid expansion in charging infrastructure, improved technologies of batteries, and wider adoption across all classes of vehicles. And as renewable energy sources continue to proliferate, so will the part that EVs play in a sustainable, low-carbon future.</p>
+      <ul>
+        <li>Global Adoption: By 2040, EVs are expected to dominate the global automotive market, with many countries setting aggressive goals to phase out fossil fuel-powered vehicles.</li>
+        <li>Integration with Smart Grids: EVs in the future will interface with smart grids, enabling energy management systems to optimize charging times and reduce peak-hour pressure on the grid.</li>
+        <li>Vehicle-to-Grid Technology: V2G technology enables electric vehicles to become mobile energy storage units, contributing to grid stability by returning stored energy back to the grid during peak demand.</li>
+      </ul>
+    </div>
+  </div>
+</section>
 
-     
-        <!-- Security Analysis Section -->
-        <section class="security box" data-aos="fade-left">
-          <h2 class="title is-3">EV Security Analysis</h2>
-          <p>With the world increasingly moving towards electric vehicles, addressing the security vulnerabilities of new technologies is quite paramount. For instance:</p>
-          <ul>
-            <li>Battery Safety: The risk of battery fire has been one of the worries, though this risk is much reduced with advances in BMS and safety protocols.</li>
-            <li>Cybersecurity: With EVs being highly connected, the potential for cyber-attacks and data breaches is an emerging concern. Ensuring that vehicle communication systems and user data are kept secure is very important in terms of trust and security.</li>
-            <li>Charging Station Security: With increasing EVs on the road, charging stations also need to be secured against potential threats for both the vehicle and the station infrastructure.</li>
-          </ul>
-        </section>
-  
-        <!-- Future of EVs Section -->
-        <section class="future box" data-aos="fade-up">
-          <h2 class="title is-3">The Future of Electric Vehicles</h2>
-          <p>The future of electric vehicles is bright. We are seeing rapid expansion in charging infrastructure, improved technologies of batteries, and wider adoption across all classes of vehicles. And as renewable energy sources continue to proliferate, so will the part that EVs play in a sustainable, low-carbon future.</p>
-          <ul>
-            <li>Global Adoption: By 2040, EVs are expected to dominate the global automotive market, with many countries setting aggressive goals to phase out fossil fuel-powered vehicles.</li>
-            <li>Integration with Smart Grids: EVs in the future will interface with smart grids, enabling energy management systems to optimize charging times and reduce peak-hour pressure on the grid.</li>
-            <li>Vehicle-to-Grid Technology: V2G technology enables electric vehicles to become mobile energy storage units, contributing to grid stability by returning stored energy back to the grid during peak demand.</li>
-          </ul>
-        </section>
-      </main>
-  
       <footer>
         <section class="sources box">
           <h2 class="title is-4">Sources</h2>
@@ -267,6 +281,7 @@
             <li><a href="https://earthjustice.org/article/electric-vehicles-are-better-for-the-environment" target="_blank">Earth Justice: EVs Produce Less CO2 Over Their Lifetime</a></li>
             <li><a href="https://www.ausloans.com.au/finance/types-of-electric-cars" target="_blank">AusLoans: Pros and Cons of EVs</a></li>
             <li><a href="https://greyviews.com/blogs/why-are-electric-vehicles-emerging" target="_blank">Grey Views: Why EV Cars Are Becoming a Trend</a></li>
+            <li><a href="https://redresscompliance.com/ai-in-automotive-cybersecurity/" target="_blank">redresscompliance: Cybersecurity on EVs</a></li>
           </ul>
         </section>
       </footer>
